# CG-Assignment5

./: Cargo.toml
models/: cactus-large.mtl  cactus-small.mtl  car.mtl  car2.mtl  wheel.mtl
shaders/: simple3D.frag  simple3D.vert
src/: main.rs
src/core/: color.rs  constants.rs  game.rs  game_object.rs  lights.rs  material.rs  matrices.rs  mod.rs  obj_loader.rs  shader.rs  skybox_shader.rs
src/game_objects/: blender_test.rs  car.rs  freecam_controller.rs  ground.rs  mod.rs  network_car.rs  player_car.rs  road_surface.rs  skybox.rs  track.rs  track_right_corner_segment.rs  track_segment.rs  track_side.rs  track_straight_segment.rs  track_u_corner_segment.rs
src/game_objects/cars/: car.rs  car_state.rs  mod.rs  network_car.rs  player_car.rs
src/game_objects/development/: freecam_controller.rs  mod.rs
src/game_objects/environment/: cactus.rs  mod.rs
src/game_objects/track/: mod.rs  track.rs  track_right_corner_segment.rs  track_segment.rs  track_side.rs  track_straight_segment.rs  track_u_corner_segment.rs
src/network/: mod.rs  models.rs  packets.rs  parser.rs  server_connection.rs
src/objects/: cube.rs  dice.rs  mesh_model.rs  mod.rs  skybox_cubemap.rs  textured_corner.rs  textured_cube.rs  textured_square.rs  track_corner.rs
src/utils/: car_sim.rs  mod.rs
