[package]
name = "CG-Assignment5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = { git = "https://github.com/gudmunduro/glow.git", branch = "main"}
sdl2 = { version = "0.35.2", features = ["image"] }
nalgebra = "0.31.2"
anyhow = "1.0.65"
itertools = "0.10.5"
nom = "7.1.1"
clap = { version = "4.0.18", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"